Fix overflow on some screen sizes

--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ main {
 
 article {
   width: 100vw;
-  height: 100%;
+  /* height: 100%; */
   background-color: var(--white);
   padding: 1rem;
 }
@@ -53,7 +53,6 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: 0.5rem;
 }
 
 hgroup {
@@ -198,7 +197,7 @@ footer {
   width: 100%;
 }
 
-@media (min-width: 1024px){
+@media (min-width: 768px){
   body {
     height: 100vh;
   }
@@ -210,8 +209,9 @@ footer {
   }
 
   article {
-    width: 50%;
-    height: 85vh;
+    width: min(60%, 900px);
+    max-height: 90vh;
+    overflow-y: scroll;
     border-radius: 10px;
     padding: 2rem;
   }
